crates/cctui-tui/src/snapshots/cctui__view_snapshots__spawn_dialog_account_labels_env_files.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 700
expression: render_screen(&mut app)
---
 cctui  v0.0.0┌ New session ─────────────────────────────────────────────────────────┐
 1 Sessions  2│  [Machine]   Dispatch    Ctrl-D switches                             │tus
   ▾ Needs inp│ Profile                                                              │
▸    ● [claude│   no profiles yet — press + to save this setup                       │
   ▾ Working (│  Machine  orion                                                      │
     ● [claude│  Dir      /home/dev/infra                                            │
     ▾ subagen│  Name     —                                                          │
       ↳ ● [cl│  Harness  claude-code                                                │
   ▾ Completed│  Model    —                                                          │
     ○ [claude│  Effort   —                                                          │
              │  Mode     default                                                    │
              │           the account's own setting                                  │
              │  Prompt   —                                                          │
              │ Account                                                              │
              │   [personal-max  62% used]                                           │
              │        pool: personal                                                │
              │      • personal-max                 62%                              │
              │        auto (most allocation left)                                   │
              │        machine login (no account)                                    │
              │ Labels                                                               │
              │   [x] cct  [ ] infra                                                 │
              │ Env                                                                  │
              │   1 set  (a add · d delete)                                          │
 j/k:nav  Ente└──────────────────────────────────────────────────────────────────────┘
