crates/cctui-tui/src/snapshots/cctui__view_snapshots__spawn_dialog_annotates_a_model_its_codex_is_too_old_for.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 424
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  ! 1 need input — Ctrl+g
 1 Sessions  2 Bookmarks  3 Overview   starred · live · dispatched  sort: activity ↓  group: status
   ▾ Needs input (1)
▸    ● [claude-code] infra (main)  opus  0s  $1.25
   ▾ Working (1)
     ● [claude┌ New session ─────────────────────────────────────────────────────────┐
     ▾ subagen│❯ Machine  orion                                                      │
       ↳ ● [cl│  Dir      /home/dev/infra                                            │
   ▾ Completed│  Name     —                                                          │
     ○ [claude│  Harness  codex                                                      │
              │  Model    gpt-6-preview                                              │
              │           needs codex ≥ 0.200.0, catalog is 0.150.0                  │
              │  Effort   —                                                          │
              │  Tier     —                                                          │
              │  Mode     default                                                    │
              │           the account's own setting                                  │
              │  Prompt   —                                                          │
              │  Ctrl-S launch   Tab next   Esc cancel                               │
              └──────────────────────────────────────────────────────────────────────┘




 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
