crates/cctui-tui/src/snapshots/cctui__view_snapshots__spawn_dialog_codex_shows_the_service_tier_and_a_mode_hint.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 403
expression: render_screen(&mut app)
---
 cctui  v0.0.0┌ New session ─────────────────────────────────────────────────────────┐
 1 Sessions  2│ Profile                                                              │
   ▾ Needs inp│   no profiles yet — press + to save this setup                       │
▸    ● [claude│  Machine  orion                                                      │
   ▾ Working (│  Dir      /home/dev/infra                                            │
     ● [claude│  Name     —                                                          │
     ▾ subagen│  Harness  codex                                                      │
       ↳ ● [cl│  Model    —                                                          │
   ▾ Completed│  Effort   —                                                          │
     ○ [claude│  Tier     —                                                          │
              │  Mode     yolo                                                       │
              │           skips prompts and sandbox                                  │
              │  Prompt   —                                                          │
              │ Account                                                              │
              │   [auto (most allocation left)]                                      │
              │ Labels                                                               │
              │   no labels yet                                                      │
              │ Env                                                                  │
              │   none  (a add)                                                      │
              │ Files                                                                │
              │   none  (o add path)                                                 │
              │  Ctrl-S launch   Tab next   Esc cancel                               │
              └──────────────────────────────────────────────────────────────────────┘
 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
