crates/cctui-tui/src/snapshots/cctui__view_snapshots__spawn_dialog_labels_env_files.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 535
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  ! 1 need input — Ctrl+g
 1 Sessions  2 Overview  3 Machines   starred · live · dispatched  sort: activity ↓  group: status
   ▾ Needs inp┌ New session ─────────────────────────────────────────────────────────┐
▸    ● [claude│  Machine  orion                                                      │
   ▾ Working (│  Dir      /home/dev/infra                                            │
     ● [claude│  Name     —                                                          │
     ▾ subagen│  Harness  claude-code                                                │
       ↳ ● [cl│  Model    —                                                          │
   ▾ Completed│  Effort   —                                                          │
     ○ [claude│  Mode     default                                                    │
              │           the account's own setting                                  │
              │  Prompt   —                                                          │
              │ Labels                                                               │
              │   [x] cct  [ ] infra                                                 │
              │ Env                                                                  │
              │   1 set  (a add · d delete)                                          │
              │      GH_TOKEN                 = **********                           │
              │ Files                                                                │
              │ › none  (o add path)                                                 │
              │  Ctrl-S launch   Tab next   Esc cancel                               │
              └──────────────────────────────────────────────────────────────────────┘


 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
