crates/cctui-tui/src/snapshots/cctui__view_snapshots__spawn_dialog_reports_a_failed_launch_inline.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 435
expression: render_screen(&mut app)
---
 cctui  v0.0.0┌ New session ─────────────────────────────────────────────────────────┐
 1 Sessions  2│  [Machine]   Dispatch    Ctrl-D switches                             │
   ▾ Needs inp│ Profile                                                              │
▸    ● [claude│   no profiles yet — press + to save this setup                       │
   ▾ Working (│  Machine  orion                                                      │
     ● [claude│  Dir      —                                                          │
     ▾ subagen│  Name     —                                                          │
       ↳ ● [cl│  Harness  claude-code                                                │
   ▾ Completed│  Model    —                                                          │
     ○ [claude│  Effort   —                                                          │
              │  Mode     default                                                    │
              │           the account's own setting                                  │
              │  Prompt   —                                                          │
              │ Account                                                              │
              │   [auto (most allocation left)]                                      │
              │ Labels                                                               │
              │   no labels yet                                                      │
              │ Env                                                                  │
              │   none  (a add)                                                      │
              │ Files                                                                │
              │   none  (o add path)                                                 │
              │ ✗ the working directory cannot be empty                              │
              │  Ctrl-S launch   Tab next   Esc cancel                               │
 j/k:nav  Ente└──────────────────────────────────────────────────────────────────────┘
