crates/cctui-tui/src/snapshots/cctui__view_snapshots__spawn_dialog_with_a_git_badge_and_the_recent_dirs_open.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 394
expression: render_screen(&mut app)
---
 cctui  v0.0.0┌ New session ─────────────────────────────────────────────────────────┐
 1 Sessions  2│ Profile                                                              │
   ▾ Needs inp│   no profiles yet — press + to save this setup                       │
▸    ● [claude│  Machine  orion                                                      │
   ▾ Working (│❯ Dir      /home/dev/infra                                            │
     ● [claude│           main ⑂ worktree                                            │
     ▾ subagen│      ❯ /home/dev/cctui                                               │
       ↳ ● [cl│        /home/dev/cctui-wt/cct-1101                                   │
   ▾ Completed│  Name     —                                                          │
     ○ [claude│  Harness  claude-code                                                │
              │  Model    —                                                          │
              │  Effort   —                                                          │
              │  Mode     default                                                    │
              │           the account's own setting                                  │
              │  Prompt   —                                                          │
              │ Account                                                              │
              │   [auto (most allocation left)]                                      │
              │ Labels                                                               │
              │   no labels yet                                                      │
              │ Env                                                                  │
              │   none  (a add)                                                      │
              │ Files                                                                │
              │   none  (o add path)                                                 │
 j/k:nav  Ente└──────────────────────────────────────────────────────────────────────┘
