crates/cctui-tui/src/snapshots/cctui__view_snapshots__spawn_dispatch_section_hidden_without_a_dispatcher.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 1977
expression: rendered
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  ! 1 need input — Ctrl+g
 1 Sessions  2┌ New session ─────────────────────────────────────────────────────────┐
   ▾ Needs inp│❯ Machine  orion                                                      │
▸    ● [claude│  Dir      /home/dev/infra                                            │
   ▾ Working (│  Name     —                                                          │
     ● [claude│  Harness  claude-code                                                │
     ▾ subagen│  Model    —                                                          │
       ↳ ● [cl│  Effort   —                                                          │
   ▾ Completed│  Mode     default                                                    │
     ○ [claude│           the account's own setting                                  │
              │  Prompt   —                                                          │
              │ Account                                                              │
              │   [auto (most allocation left)]                                      │
              │ Labels                                                               │
              │   no labels yet                                                      │
              │ Env                                                                  │
              │   none  (a add)                                                      │
              │ Files                                                                │
              │   none  (o add path)                                                 │
              │ Dispatch                                                             │
              │  Ctrl-S launch   Tab next   Esc cancel                               │
              └──────────────────────────────────────────────────────────────────────┘

 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
