crates/cctui-tui/src/snapshots/cctui__view_snapshots__spawn_dispatch_tab_at_eighty_columns.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 1966
expression: "render_screen_sized(&mut app, 80, 24)"
---
 cct┌ New session ─────────────────────────────────────────────────────────┐
 1 S│❯ Machine  orion                                                      │atus
   ▾│  Dir      /home/dev/infra                                            │
▸   │  Name     —                                                          │
   ▾│  Harness  claude-code                                                │
    │  Model    —                                                          │
    │  Effort   —                                                          │
    │  Mode     default                                                    │
   ▾│           the account's own setting                                  │
    │  Prompt   —                                                          │
    │ Account                                                              │
    │   [auto (most allocation left)]                                      │
    │ Labels                                                               │
    │   no labels yet                                                      │
    │ Env                                                                  │
    │   none  (a add)                                                      │
    │ Files                                                                │
    │   none  (o add path)                                                 │
    │ Dispatch                                                             │
    │ Dispatcher [k8s-cyberia           ]  Harness (*) claude ( ) codex    │
    │ Repo [cctui             ] Ticket [CCT-1102      ] Timeout [60   ] min│
    │ Prompt [                                                          ]  │
    │ Context pack                                                         │
 j/k└──────────────────────────────────────────────────────────────────────┘
